A black screen appears in a muted video element outside the viewport https://bugs.webkit.org/show_bug.cgi?id=241152 rdar://problem/94562636

Patch by Youenn Fablet <youennf@gmail.com> on 2022-06-16
Reviewed by Eric Carlson.

We sometimes remove the invisible autoplay restrictions.
If we remove it while we are suspended due this restriction, we will not unsuspend and will wait for a user interaction.
To prevent this, we do not return early in updateShouldAutoplay if we are interrupted due to the invisible autoplay restriction.

* LayoutTests/fast/mediastream/video-mediastream-restricted-invisible-autoplay-user-click-expected.txt: Added.
* LayoutTests/fast/mediastream/video-mediastream-restricted-invisible-autoplay-user-click.html: Added.
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::updateShouldAutoplay):

Canonical link: https://commits.webkit.org/251596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295591 268f45cc-cd09-0410-ab3c-d52691b4dbfc